gcloud/arithmetic-server.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: arithmetic-server
  name: arithmetic-server
spec:
  selector:
    matchLabels:
      run: arithmetic-server
  replicas: 2
  template:
    metadata:
      labels:
        run: arithmetic-server
        app: arithmetic-server
    spec:
      containers:
      - image: saranshsaini/gke:latest
        name: arithmetic-server
        ports:
        - protocol: TCP
          containerPort: 50051
