gcloud/app1-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-loadbalancer
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: app1
  ports:
  - protocol: TCP
    port: 50051
    targetPort: 50051
    name: grpc
