gcloud/ing-ser2.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 80
