gcloud/ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: arithmetic-server
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 50051
    name: grpc
