gcloud/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: arithmetic-server-loadbalancer
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: arithmetic-server
  ports:
  - protocol: TCP
    port: 50051
    targetPort: 50051
    name: grpc
